[project]
name = "water-well"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "argparse>=1.4.0",
    "matplotlib>=3.9.4",
    "nibabel>=5.3.2",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "rasterio>=1.4.3",
    "scikit-image>=0.24.0",
    "scipy>=1.13.1",
    "tqdm>=4.67.1",
]
